# rust-xmpp

./: .gitmodules  COPYING  Cargo.toml  Makefile  README.md
examples/: connect.rs  echo.rs  ping.rs
src/: lib.rs  non_stanzas.rs  ns.rs  read_str.rs  xmpp_send.rs  xmpp_socket.rs
src/auth/: anon.rs  mod.rs  plain.rs  scram.rs
src/example/: main.rs
src/stanzas/: iq.rs  message.rs  mod.rs  presence.rs
src/xmpp/: lib.rs  ns.rs  read_str.rs  xmpp_send.rs  xmpp_socket.rs
src/xmpp/auth/: mod.rs  plain.rs  scram.rs
src/xmpp/stanzas/: iq.rs  message.rs  mod.rs  presence.rs
