[package]

name = "rust-xmpp"
version = "0.0.0"
authors = [ "florob@babelmonkeys.de" ]

[lib]
name = "xmpp"
path = "src/xmpp/lib.rs"

[dependencies.RustyXML]
git = "https://github.com/Florob/RustyXML"

[dependencies.openssl]
git = "https://github.com/sfackler/rust-openssl"

[[bin]]
name = "rust-xmpp-example"
